fixed broken css code

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ h3 {
 h5 {
   color: $white;
   font-family: 'Inter', sans-serif;
-  text-shadow: 1px 1px 2px $$black
+  text-shadow: 1px 1px 2px $black;
 }
 
 h6 {
